<resources>
    <string name="_1"> ناشتہ سے پہلے </string>
    <string name="_2"> ناشتہ </string>
    <string name="_3"> ناشتہ اور دوپہر کے کھانے کے درمیان </string>
    <string name="_4"> دوپہر کا کھانا </string>
    <string name="_5"> دوپہر اور رات کے کھانے کے درمیان </string>
    <string name="_6"> رات کا کھانا </string>
    <string name="_7"> رات کے کھانے اور سونے کے درمیان </string>
    <string name="action_sign_in"> Login </string>
    <string name="action_sign_in_short"> Sign in </string>
    <string name="addMember"> Воридкунии аъзо </string>
    <string name="addMore"> مزید اندراج کریں </string>
    <string name="anthroa"> иҷро шуд </string>
    <string name="anthrob"> иҷро нашуд </string>
    <string name="anthroc"> рад карда шуд </string>
    <string name="anthrod"> Дар хона ҳоло не </string>
    <string name="anthrostatus"> Assessment Status </string>
    <string name="app_name"> CENTRAL ASIA STUNTING INITIATIVE 2019 - Tajik </string>
    <string name="at10wks"> Дар 3 моҳагӣ </string>
    <string name="at14wks"> Дар 4 моҳагӣ </string>
    <string name="at15m"> Дар 16-22 моҳагӣ </string>
    <string name="at6wks"> Дар 2 моҳагӣ </string>
    <string name="at6years"> 6 солагӣ </string>
    <string name="at9m"> Дар 12 моҳагӣ </string>
    <string name="atbirth"> Баъди 24 соат пас аз таваллуд </string>
    <string name="atbirth2"> Дар давоми 3-5 рузи баъди таваллуд </string>
    <string name="barcode"> اگر ہاں، تو بار کوڈ اسکین کریں </string>
    <string name="benef"> Шумора шахсоне, ки кумак гирифтаанд </string>
    <string name="btnSync"> Sync </string>
    <string name="btnUpload"> Upload </string>
    <string name="card"> Корт </string>
    <string name="checkHHpresent"> Сарлавҳаи интихобшуда мавҷуд аст </string>
    <string name="childname"> номи кӯдак </string>
    <string name="cic101"> C112 - Номи кудак </string>
    <string name="cic101a"> Номи </string>
    <string name="cic102"> Рақами деҳа: </string>
    <string name="cic103"> کیا (Name) کی پیدائش کا سرٹیفیکٹ بناہوا ہے    اگر نہیں ،تو ایونٹ کلینڈر استعمال کر کے بچے کی عمر کی شمار کریں </string>
    <string name="cic103a"> ہاں ،دیکھا </string>
    <string name="cic103b"> ہاں ،نہیں دیکھا </string>
    <string name="cic103info"> اگر ہاں ، تو پوچھیں کیا میں یہ سرٹیفیکٹ دیکھ سکتا ہوں اور بچہ کی عمر مہینوں میں لکھیں </string>
    <string name="cic104"> C104 - کیا بچہ (Name) کا نادرا میں اندراج کردیاگیاہے؟ </string>
    <string name="cic1heading"> ҚИСМИ C1: МАЪЛУМОТ ОИДИ КУДАКОНИ ТО 5 СОЛА </string>
    <string name="cic1info"> МОДУЛ C:ҒИЗОИ КУДАКОНИ ТО 5 СОЛА </string>
    <string name="cic1info1"> Дастурамал:Ин қисм барои ҳамаи кудакони то 2 сола бо модарони онҳо ё касе, ки онҳоро нигоҳубин мекунад, пур карда мешавад. </string>
    <string name="cic2_child_name"> Номи кудак </string>
    <string name="cic2_line_no"> Рақами сатри кудак </string>
    <string name="cic201"> C201 - Ман мехоҳам аз шумо чанд савол дар бораи (НОМ) пурсам. \n Дар кадом моҳ ва сол (НОМ) таваллуд шудааст? \n Рузи таваллудашон кадом аст? АГАР МУСОҲИБ РУЗИ АНИҚИ ТАВАЛЛУДИ КУДАКРО НАДОНАД, ПУРСЕД: Оё (НОМ) корти тиббӣ/эмкунӣ, ки дар он рузи таваллуд қайд карда шудааст дорад? АГАР КОРТИ ТИББӢ/ЭМКУНӢ НИШОН ДОДА ШАВАД ВА МУСОҲИБ ТАСДИҚ КУНАД, КИ МАЪЛУМОТИ КОРТ САҲЕҲ АСТ, РУЗИ ТАВАЛЛУДРО АЗ КОРТ НАВИСЕД. </string>
    <string name="cic201info"> АГАР МУСОҲИБ РУЗИ АНИҚИ ТАВАЛЛУДИ КУДАКРО НАДОНАД, ПУРСЕД: Оё (НОМ) корти тиббӣ/эмкунӣ, ки дар он рузи таваллуд қайд карда шудааст дорад? АГАР КОРТИ ТИББӢ/ЭМКУНӢ НИШОН ДОДА ШАВАД ВА МУСОҲИБ ТАСДИҚ КУНАД, КИ МАЪЛУМОТИ КОРТ САҲЕҲ АСТ, РУЗИ ТАВАЛЛУДРО АЗ КОРТ НАВИСЕД </string>
    <string name="cic202"> C202 - (НОМ) дар рузи таваллуди охирон чанд сола шуд? \n СИННУ СОЛИ ПУРРАРО НАВИСЕД </string>
    <string name="cic202a"> Камтар аз 1 сол </string>
    <string name="cic202b"> Аз 1 то 2 сол </string>
    <string name="cic202c"> 2 сол </string>
    <string name="cic203"> C203 -(НОМ) чанд моҳа аст СИННУ СОЛРО БО МОҲ НАВИСЕД. </string>
    <string name="cic203a"> C203 - Синну сол бо моҳ </string>
    <string name="cic204"> C204- БАРОИ МУВОФИҚА БУДАНИ МАЪЛУМОТ САВОЛҲОИ C201,C202 ВАC203РО ТАФТИШ КУНЕД. \n АГАР ҶОВОБ БА C204A Ё C204B  ‘НЕ’ БОШАД, НОМУВОФИҚИИ МАЪЛУМОТРО ДУРУСТ КУНЕД.  АГАР РУЗИ ТАВАЛЛУД ДАР КОРТИ ТИББӢ ҚАЙД КАРДА ШУДААСТ, ОНРО БАРОИ ДУРУСТ КАРДАНИ МАЪЛУМОТ ИСТИФОДА БАРЕД. </string>
    <string name="cic204a"> C204A -ОЁ СОЛ ДАР САВОЛИ C201 БО СИННУ СОЛИ ПУРРА ДАР САВОЛИ C202 МУВОФИҚ АСТ? </string>
    <string name="cic204b"> C204B -ОЁ СОЛ ВА МОҲ ДАР САВОЛИ Q1 БО СИННУ СОЛ БО МОҲ ДАР САВОЛИ C203 МУВОФИҚ АСТ </string>
    <string name="cic205"> C205 -САВОЛИC203 РО ТАФТИШ КУНЕД. ОЁ КУДАК АЗ 24 МОҲА ХУРДТАР АСТ? </string>
    <string name="cic206"> C206 -Оё ба (Name) ягон вақт шири сина дода шудааст? </string>
    <string name="cic207"> C207 -Чанд вақт пас баъди таваллуд ба (Name) сина додед? </string>
    <string name="cic207a"> Фавран </string>
    <string name="cic207b"> Соат </string>
    <string name="cic207c"> Руз </string>
    <string name="cic208"> C208 -Оё шумо ба (Name) шири нахустин (яъне, фила) ро додед? </string>
    <string name="cic209"> C209 - Бо чӣ сабаб шумо ба (Name) филаро надодед? </string>
    <string name="cic209a"> Шири вайрон </string>
    <string name="cic209b"> Аз касалшавии кудак тарсидам </string>
    <string name="cic209c"> Шири ғафс </string>
    <string name="cic210"> C210 -Оё ба (Name) пеш аз шири сина ягон чиз барои нушидан дода шуд? </string>
    <string name="cic211"> C211 -Пеш аз шири сина ба (Name) чиро додед?\n Пурсед: Боз ягон чизи дигар?\n ‘Ягон яиз дода нашуд’ (99) фақат дар мавриде навишта мешавад, агар ягон ҷавоби дигар дода нашавад.\n[Якчанд ҷавоб мумкин асm] </string>
    <string name="cic21199"> Ягон яиз дода нашуд </string>
    <string name="cic211a"> Шир (ба ғайр аз шири сина) </string>
    <string name="cic211b"> Оби соф </string>
    <string name="cic211c"> Об бо шакар </string>
    <string name="cic211d"> Маҳлул бо намак ва шакар </string>
    <string name="cic211e"> Шарбати мева </string>
    <string name="cic211f"> Ғизои кудакона </string>
    <string name="cic211g"> Чой/нӯшокии анъанавӣ аз гиёҳҳо </string>
    <string name="cic211h"> Асал </string>
    <string name="cic211i"> Доруворӣ </string>
    <string name="cic211info"> Пурсед: Боз ягон чизи дигар?‘Ягон чиз дода нашуд’ (99)фақат дар мавриде навишта мешавад, агар ягон ҷавоби дигар дода нашавад </string>
    <string name="cic211j">   </string>
    <string name="cic212"> C212 -Оё (Name) дина шабона ё рузона шири сина истеъмол кард? </string>
    <string name="cic212a"> C212a -Баъзан ба кудак шири сина бо усулҳои гуногун дода мешавад. Масалан, бо қошуқ, бо пиёла, бо шиша. Ин дар он мавридҳое шуда метавонад, ки агар модар бо кудак ба таври доимӣ набошад. Баъзан ба кудак зани дигар шири сина медиҳад. Ин дар он ҳолатҳое мешавад, ки агар зан натавонад кудаки худро сина диҳад.\n  Оё (НОМ) дина шабона ва рузона шири синаро бо ягон аз усулҳои зикршуда истеъмол кардааст? </string>
    <string name="cic213"> C213 -Ҳозир ман мехоҳам бо шумо оиди доруҳо ва витаминҳое, ки баъзан ба кудак дода мешаванд суҳбат кунам. \n Оё ба (Name) дина шабона ва рузона ягон дору ва ё витамини моеъ дода шуд? </string>
    <string name="cic214"> C214 -Оё ба (Name) дина шабона ва рузона Регидрон дода шуд? </string>
    <string name="cic215"> C215 -Ҳозир ман мехостам бо шумо оиди нушокиҳое, ки ба (Name) дина шабона ва рузона дода шуданд, суҳбат кунам.\n Оё ба (Name) дода шуд? \n ҲАР ЯК НУШОКИРО ХОНДА ҶАВОБҲОРО НАВИСЕД. </string>
    <string name="cic215a"> A. Оби соф </string>
    <string name="cic215b"> B. Ғизои кудакона </string>
    <string name="cic215c"> C. Шир (дар қутӣ, хушк ё шири тозаи ҳайвонот) </string>
    <string name="cic215d"> D. Сок </string>
    <string name="cic215e"> E. Хомшурбо </string>
    <string name="cic215f"> F. Ёгурт (каша) </string>
    <string name="cic215g"> G. Шавлаи сероб (каша) </string>
    <string name="cic215h"> H. Дигар ғизои моеъ (номгуи дигар ғизоҳои моеъро, ки дар маҳал ҳастанд, номбар кунед) </string>
    <string name="cic215i"> I. Дигар </string>
    <string name="cic217"> C217 -Лутфан ҳамаи ғизоҳоеро, ки (Name) дина шабона ва рузона дар хона ва ё берун истеъмол кардааст, номбар кунед. </string>
    <string name="cic217a"> A. Шавла, нон, биринҷ, макарон ё дигар хӯрокҳо аз ғалладона </string>
    <string name="cic217b"> B. Каду, сабзӣ, ё картошкаи ширин, ки дохилаш зард аст </string>
    <string name="cic217c"> C. Картошкаи сафед,ё дигар озуқа аз решаҳои сафед </string>
    <string name="cic217d"> D. Сабзавотҳои сабзранги тира </string>
    <string name="cic217e"> E. Дигар мева ё сабзавот ба ғайр аз B ва D </string>
    <string name="cic217f"> F. Ҷигар, гурда, дил, шуш ё дигар гушти узвҳо </string>
    <string name="cic217g"> G. Гӯшти чорво ва мурғ, аз ҷумла гӯшти гов, гӯсфанд, буз, харгӯш, мурғ, мурғобӣ ва дигар паррандаҳо </string>
    <string name="cic217h"> H. Тухм </string>
    <string name="cic217i"> I. Моҳии тарутоза ё хушккардашуда, ё ки ғизои баҳрӣ (ё консервшуда) </string>
    <string name="cic217j"> J. Ягон хурок аз лубиё (фасол, боқило) ё нахуди расидагӣ (донаи тарутоза ё хушк), маҳсулоти наск </string>
    <string name="cic217k"> K. Панир, ёгурт ва дигар маҳсулоти ширӣ </string>
    <string name="cic217l"> L. Ягон намуди равған, чарб, маска/равғани зард ё хӯрокҳое, ки аз инҳо омода шудаанд. </string>
    <string name="cic217m"> M. Маҳсулотҳо аз шакар, ба мисоли шоколад, ширинӣ, торт ё кулчақанд </string>
    <string name="cid409"> D409- در وقت آماده سازی غذای طفل تان، چه اندازه خود را مطمئین احساس می کنید؟ </string>
    <string name="cid409a"> مطمئین نیست </string>
    <string name="cid409b"> مطمئین نیست </string>
    <string name="cid409c"> مطمئین </string>
    <string name="cid410"> D410- به نظرتان چه اندازه خوب است که هر روز غذاهای مختلف به طفل تان بدهید؟ </string>
    <string name="cid410a"> خوب نیست </string>
    <string name="cid410b"> مطمئین نیست </string>
    <string name="cid410c"> مطمئین </string>
    <string name="cid411"> D411- چقدر مشکل است که به طفل تان هر روز غذاهای مختلف بدهید؟ </string>
    <string name="cid411a"> مشکل نیست </string>
    <string name="cid411b"> کمی است، کمی نیست </string>
    <string name="cid411c"> مشکل </string>
    <string name="cid412"> D412- به نظرتان چه اندازه خوب است که چندین مراتبه در روز به طفل تان غذا بدهید؟ </string>
    <string name="cid412a"> مطمئین نیست </string>
    <string name="cid412b"> مطمئین نیست </string>
    <string name="cid412c"> خوب </string>
    <string name="cid413"> D413- چقدر مشکل است برایتان که طفل خود را چندین مراتبه در روز غذا بدهید؟ </string>
    <string name="cid413a"> مشکل نیست </string>
    <string name="cid413b"> مطمئین نیست </string>
    <string name="cid413c"> مشکل </string>
    <string name="cid414"> D414- به نظرتان چه اندازه خوب است که شیردهی مادر بعد از شش ماه هم ادامه یابد؟ </string>
    <string name="cid414a"> خوب نیست </string>
    <string name="cid414b"> مطمئین نیست </string>
    <string name="cid414c"> خوب </string>
    <string name="cid415"> D415- چقدر مشکل است برایتان که شیردهی مادر بعد از شش ماه ادامه یابد؟ </string>
    <string name="cid415a"> مشکل نیست </string>
    <string name="cid415b"> مطمئین نیست </string>
    <string name="cid415c"> مشکل </string>
    <string name="end_interview"> Анҷоми сӯҳбат </string>
    <string name="hb_result"> E104. Натиҷаи санҷиши гемоглобинро нависед </string>
    <string name="ne102"> шахсро интихоб кунед </string>
    <string name="ne107"> E105.  ГЕМОГЛОБИН Натиҷаи </string>
    <string name="ne107a"> Дар хона нест </string>
    <string name="ne107b"> Рад кард </string>
    <string name="ne107c"> иҷро шуд </string>
    <string name="ne1heading"> MODULE E: САНҶИШИ ГЕМОГЛОБИН </string>
    <string name="neselected"> E103. Гуруҳи аъзои интихобшуда </string>
    <string name="nextSection"> Қисми навбатӣ </string>
    <string name="saveMember"> аъзои наҷот </string>
</resources>